--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- <script type="module" src="./stack/stack.js"></script> -->
   <!-- <script type="module" src="./stack/stack-1.js"></script> -->
   <!-- <script type="module" src="./stack/stack-2.js"></script> -->
-  <!-- <script type="module" src="./queue/queue.js"></script> -->
-  <script type="module" src="./heap/heap.js"></script>
+  <script type="module" src="./queue/queue-1.js"></script>
+  <!-- <script type="module" src="./heap/heap.js"></script> -->
 </body>
 </html>
